--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
       <!--HERO-->
-      <section class="hero">
+      <section class="overlay">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="button primary" type="button">Order Service</button>
