--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
           <h2 class="visually-hidden">Goals</h2>
           <ul class="goals-ul">
             <li class="goals-item">
+              <div class="goals-box">
+                <svg class="antenna-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-antenna"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="definition">Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +79,13 @@
               </p>
             </li>
             <li class="goals-item">
+              <div class="goals-box">
+                <svg class="antenna-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-clock"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="definition">Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +93,13 @@
               </p>
             </li>
             <li class="goals-item">
+              <div class="goals-box">
+                <svg class="antenna-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-diagram"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="definition">Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
@@ -86,6 +107,13 @@
               </p>
             </li>
             <li class="goals-item">
+              <div class="goals-box">
+                <svg class="antenna-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-astronaut"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="definition">Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -141,6 +169,68 @@
               />
               <h3 class="definition">Mark Guerrero</h3>
               <p>Product Designer</p>
+              <ul class="social-list">
+                <li>
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for instagram"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for twitter"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for facebook"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for linkedin"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="teamphotoes-li">
               <img
@@ -151,6 +241,68 @@
               />
               <h3 class="definition">Tom Ford</h3>
               <p>Frontend Developer</p>
+              <ul class="social-list">
+                <li>
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for instagram"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for twitter"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for facebook"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for linkedin"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="teamphotoes-li">
               <img
@@ -161,6 +313,68 @@
               />
               <h3 class="definition">Camila Garcia</h3>
               <p>Marketing</p>
+              <ul class="social-list">
+                <li>
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for instagram"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for twitter"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for facebook"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for linkedin"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="teamphotoes-li">
               <img
@@ -171,6 +385,68 @@
               />
               <h3 class="definition">Daniel Wilson</h3>
               <p>UI Designer</p>
+              <ul class="social-list">
+                <li>
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for instagram"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for twitter"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for facebook"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href=""
+                    class="social-list-link"
+                    aria-label="link for linkedin"
+                    rel="noopener noreferer"
+                    target="_blank"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -178,14 +454,81 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logotype link"
-          >Web<span class="studio-footer">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container-footer">
+        <div>
+          <a href="./index.html" class="logotype link"
+            >Web<span class="studio-footer">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-footer">
+          <p class=>Social media</p>
+          <ul class="social-list-footer">
+            <li>
+              <a
+                href=""
+                class="social-footer-link"
+                aria-label="link for instagram"
+                rel="noopener noreferer"
+                target="_blank"
+              >
+                <svg class="social-footer-icon" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href=""
+                class="social-footer-link"
+                aria-label="link for twitter"
+                rel="noopener noreferer"
+                target="_blank"
+              >
+                <svg width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href=""
+                class="social-footer-link"
+                aria-label="link for facebook"
+                rel="noopener noreferer"
+                target="_blank"
+              >
+                <svg class="social-list-icon" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href=""
+                class="social-footer-link"
+                aria-label="link for linkedin"
+                rel="noopener noreferer"
+                target="_blank"
+              >
+                <svg class="social-list-icon" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
