--- a/portfolio.html
+++ b/portfolio.html
@@ -181,14 +181,81 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logotype link"
-          >Web<span class="studio-footer">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container-footer">
+        <div>
+          <a href="./index.html" class="logotype link"
+            >Web<span class="studio-footer">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-footer">
+          <p class=>Social media</p>
+          <ul class="social-list-footer">
+            <li>
+              <a
+                href=""
+                class="social-footer-link"
+                aria-label="link for instagram"
+                rel="noopener noreferer"
+                target="_blank"
+              >
+                <svg class="social-footer-icon" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href=""
+                class="social-footer-link"
+                aria-label="link for twitter"
+                rel="noopener noreferer"
+                target="_blank"
+              >
+                <svg width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href=""
+                class="social-footer-link"
+                aria-label="link for facebook"
+                rel="noopener noreferer"
+                target="_blank"
+              >
+                <svg class="social-list-icon" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href=""
+                class="social-footer-link"
+                aria-label="link for linkedin"
+                rel="noopener noreferer"
+                target="_blank"
+              >
+                <svg class="social-list-icon" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
