--- a/index.html
+++ b/index.html
@@ -451,6 +451,98 @@
           </ul>
         </div>
       </section>
+      <!--CUSTOMERS-->
+      <section class="section">
+        <div class="container">
+          <h2 class="subtitle">Customers</h2>
+          <ul class="customers-list">
+            <li>
+              <a
+                href=""
+                class="customer-link"
+                aria-label="link for customer"
+                rel="noopener noreferer"
+                target="_blank"
+                ><svg width="104" height="56" class="customer-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-client1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href=""
+                class="customer-link"
+                aria-label="link for customer"
+                rel="noopener noreferer"
+                target="_blank"
+                ><svg width="104" height="56" class="customer-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-client2"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href=""
+                class="customer-link"
+                aria-label="link for customer"
+                rel="noopener noreferer"
+                target="_blank"
+                ><svg width="104" height="56" class="customer-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-client3"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href=""
+                class="customer-link"
+                aria-label="link for customer"
+                rel="noopener noreferer"
+                target="_blank"
+                ><svg width="104" height="56" class="customer-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-client4"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href=""
+                class="customer-link"
+                aria-label="link for customer"
+                rel="noopener noreferer"
+                target="_blank"
+                ><svg width="104" height="56" class="customer-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-client5"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href=""
+                class="customer-link"
+                aria-label="link for customer"
+                rel="noopener noreferer"
+                target="_blank"
+                ><svg width="104" height="56" class="customer-icon">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-client6"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!--FOOTER-->
     <footer class="footer">
@@ -465,7 +557,7 @@
           </p>
         </div>
         <div class="social-footer">
-          <p class=>Social media</p>
+          <p>Social media</p>
           <ul class="social-list-footer">
             <li>
               <a
