--- a/portfolio.html
+++ b/portfolio.html
@@ -74,106 +74,151 @@
             </li>
           </ul>
           <ul class="portfolio-illustrations">
-            <li class="portfolio-li">
-              <img
-                src="./images/portfolio-items/banking-app-interface-concept.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">
-                  Banking App Interface Concept
-                </h2>
-                <p class="portfolio-business">App</p>
-              </div>
+            <li>
+                <a href="" class="portfolio-illustration-link link"
+                aria-label="link for Banking App Interface Concept"
+                rel="noopener noreferer"
+                target="_blank">
+                <img
+                  src="./images/portfolio-items/banking-app-interface-concept.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-business">App</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-li">
-              <img
-                src="./images/portfolio-items/cashless-payment.jpg"
-                alt="Bank terminal"
-                width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">Cashless Payment</h2>
-                <p class="portfolio-business">Marketing</p>
-              </div>
+            <li>
+              <a href="" class="portfolio-illustration-link link"
+              aria-label="link for cashless-payment"
+              rel="noopener noreferer"
+              target="_blank">
+                <img
+                  src="./images/portfolio-items/cashless-payment.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">Cashless Payment</h2>
+                  <p class="portfolio-business">Marketing</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-li">
-              <img
-                src="./images/portfolio-items/meditaion-app.jpg"
-                alt="Laptop and smartphone"
-                width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">Meditaion App</h2>
-                <p class="portfolio-business">App</p>
-              </div>
+            <li>
+              <a href="" class="portfolio-illustration-link link"
+              aria-label="link for Meditaion App"
+              rel="noopener noreferer"
+              target="_blank">
+                <img
+                  src="./images/portfolio-items/meditaion-app.jpg"
+                  alt="Laptop and smartphone"
+                  width="360"
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">Meditaion App</h2>
+                  <p class="portfolio-business">App</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-li">
-              <img
+            <li>
+              <a href="" class="portfolio-illustration-link link"
+              aria-label="link for Taxi Service"
+              rel="noopener noreferer"
+              target="_blank">
+                <img
                 src="./images/portfolio-items/taxi-service.jpg"
                 alt="Smartphone inside taxi"
                 width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">Taxi Service</h2>
-                <p class="portfolio-business">Marketing</p>
-              </div>
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">Taxi Service</h2>
+                  <p class="portfolio-business">Marketing</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-li">
-              <img
+            <li>
+              <a href="" class="portfolio-illustration-link link"
+              aria-label="link for Screen Illustrations"
+              rel="noopener noreferer"
+              target="_blank">
+                <img
                 src="./images/portfolio-items/screen-illustrations.jpg"
                 alt="Images on screen"
-                width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">Screen Illustrations</h2>
-                <p class="portfolio-business">Design</p>
-              </div>
+                  width="360"
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">Screen Illustrations</h2>
+                  <p class="portfolio-business">Design</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-li">
-              <img
-                src="./images/portfolio-items/online-courses.jpg"
-                alt="Girl looks at the smartphone"
-                width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">Online Courses</h2>
-                <p class="portfolio-business">Marketing</p>
-              </div>
+            <li>
+              <a href="" class="portfolio-illustration-link link"
+              aria-label="link for Online Courses"
+              rel="noopener noreferer"
+              target="_blank">
+                <img
+                  src="./images/portfolio-items/online-courses.jpg"
+                  alt="Girl looks at the smartphone"
+                  width="360"
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">Online Courses</h2>
+                  <p class="portfolio-business">Marketing</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-li">
-              <img
-                src="./images/portfolio-items/instagram-stories-concept.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">Instagram Stories Concept</h2>
-                <p class="portfolio-business">Design</p>
-              </div>
+            <li>
+              <a href="" class="portfolio-illustration-link link"
+              aria-label="link for Instagram Stories Concept"
+              rel="noopener noreferer"
+              target="_blank">
+                <img
+                  src="./images/portfolio-items/instagram-stories-concept.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">Instagram Stories Concept</h2>
+                  <p class="portfolio-business">Design</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-li">
-              <img
-                src="./images/portfolio-items/organic-food.jpg"
-                alt="Vegetables in the bag"
-                width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">Organic Food</h2>
-                <p class="portfolio-business">Web Site</p>
-              </div>
+            <li>
+              <a href="" class="portfolio-illustration-link link"
+              aria-label="link for web site Organic Food"
+              rel="noopener noreferer"
+              target="_blank">
+                <img
+                  src="./images/portfolio-items/organic-food.jpg"
+                  alt="Vegetables in the bag"
+                  width="360"
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">Organic Food</h2>
+                  <p class="portfolio-business">Web Site</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-li">
-              <img
-                src="./images/portfolio-items/fresh-coffee.jpg"
-                alt="Barista making fresh-coffee"
-                width="360"
-              />
-              <div class="portfolio-border">
-                <h2 class="definition-portfolio">Fresh Coffee</h2>
-                <p class="portfolio-business">Web Site</p>
-              </div>
+            <li>
+              <a href="" class="portfolio-illustration-link link"
+              aria-label="link for Fresh Coffee web site "
+              rel="noopener noreferer"
+              target="_blank">
+                <img
+                  src="./images/portfolio-items/fresh-coffee.jpg"
+                  alt="Barista making fresh-coffee"
+                  width="360"
+                />
+                <div class="portfolio-border">
+                  <h2 class="definition-portfolio">Fresh Coffee</h2>
+                  <p class="portfolio-business">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
